# scouter-server

./: .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  release-plz.toml
.github/workflows/: custom.yml  release-binary.yml  release.yml  test-lints.yml
db/: init.sql
migrations/: 20240614172639_setup.sql  20240910145546_add_alert_table.sql  20241004144114_observability.sql
setup/: README.md  init.sql
src/: __kafka.rs  _main.rs  handler.rs  kafka_util.rs  kafka_utils.rs  lib.rs  main.rs  postgres.rs  route.rs  schema.rs
src/alerts/: base.rs  dispatch.rs  drift.rs  mod.rs  types.rs
src/alerts/spc/: drift.rs
src/api/: handler.rs  mod.rs  route.rs  schema.rs  setup.rs
src/consumer/: base.rs  consumer.rs  mod.rs
src/consumer/kafka/: consumer.rs  startup.rs
src/consumer/rabbitmq/: consumer.rs  startup.rs
src/kafka/: consumer.rs  startup.rs
src/rabbitmq/: consumer.rs  startup.rs
src/sql/: postgres.rs  query.rs  schema.rs
src/sql/scripts/: binned_feature_values.sql  binned_observability_metrics.sql  delete_from_queue.sql  feature_values.sql  get_alert_metrics.sql  get_binned_alerts.sql  get_drift_alerts.sql  get_drift_profile.sql  get_feature_distribution.sql  insert_alert.sql  insert_batch_drift_records.sql  insert_drift_alert.sql  insert_drift_profile.sql  insert_drift_record.sql  insert_into_queue.sql  insert_observability_record.sql  poll_for_drift_task.sql  unique_features.sql  update_drift_alert.sql  update_drift_profile.sql  update_drift_profile_run_dates.sql  update_drift_profile_status.sql
src/utils/: types.rs
tests/: api_integration.rs  drift_executor.rs  drift_integration.rs  integration_api.rs  integration_kafka_test.rs  integration_postgres_test.rs  intergration_full_workflow.rs  kafka_integration.rs  postgres_integration.rs  rabbitmq_integration.rs  run_tests.sh  test_utils.rs  utils.rs
tests/common/: mod.rs
tests/scripts/: bulk_populate.sql  populate.sql
