[package]
name = "scouter-server"
version = "0.1.3"
edition = "2021"

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Scouter server for model monitoring"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.30"
include_dir = "0.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.36"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["json", "time"]}
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
cron = "0.12.1"
ndarray = "0.15.6"
scouter = "0.2.1"
reqwest = { version = "0.12.5", features = ["json"] }

[dev-dependencies]
approx = "0.5.1"
http-body-util = "0.1.2"
sqlx-cli = { version = "0.7.4", default-features = false, features = ["native-tls", "postgres"] }
tower = { version = "0.4.13", features = ["util"] }



